align fix

--- a/frontend/src/components/Main/common/UserInfo.css
+++ b/frontend/src/components/Main/common/UserInfo.css
@@ -15,13 +15,6 @@
 .user-info__photo {
 
 }
-.user-info__photo img {
-  margin: auto;
-  min-height: 150px;
-  max-height: 100%;
-  min-width: 105px;
-  max-width: 100%;
-}
 .user-info__rate {
   width: 100%;
   max-width: 200px;
@@ -63,7 +56,6 @@
     height: auto;
   }
   .user-info__photo {
-    height: auto;
     margin-bottom: 20px;
   }
   .user-info__rate {
